corrected bottom comp from overlapping carousel with absolute conflict.

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -23,7 +23,8 @@
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        position: absolute;
+        display: block !important;
+        /* position: absolute !important; */
     }
     
     .maglogo {
@@ -117,10 +118,12 @@
     }
     
     .carousel {
+        display: block !important;
+        /* position: absolute !important; */
         width: 100%;
         margin: 0 auto;
         padding: 25px;
-        margin-bottom: 4%;
+        margin-bottom: 1%;
     }
     
     .carousel-item img {
@@ -136,6 +139,12 @@
     
     .carousel-control-prev-icon {
         visibility: hidden;
+    }
+    
+    .component-style {
+        position: relative !important;
+        margin: 0 auto;
+        margin-bottom: 6%;
     }
     
     .balance-contact {
@@ -544,9 +553,12 @@
         margin-top: 2%;
     }
     
+    .makemesmaller {
+        font-size: 1.3rem;
+    }
+    
     .shopping-cart h1,
     p {
-        font-size: 1.3rem;
         padding: 2px 0;
         margin: 0 20px;
     }
@@ -673,7 +685,7 @@
         /* display: block; */
         left: 0;
         margin: 0 auto;
-        position: absolute !important;
+        position: relative !important;
         width: 100%;
         height: 500px !important;
         /* grid-row-start: 2 !important;
